# partial-pretty-printer

./: .gitignore  Cargo.toml  LICENSE.md  README.md
doc/: ppp.tex  proofs.md  refn_impl  refn_impl.hs  refn_impl_tree.hs
examples/: ATTRIBUTION.md  json.rs
outdated-proofs/: proofs_tree.md  refn_impl_tree.hs  why-no-align.md
src/: consolidated_notation.rs  doc.rs  geometry.rs  infra.rs  json_notation.rs  lib.rs  measure.rs  notation.rs  notation_constructors.rs  oracle.rs  partial_pretty_print.rs  pretty_doc.rs  pretty_print.rs  simple_doc.rs  style.rs  valid_notation.rs  validate.rs  virtual_notation.rs
src/doc_examples/: json.rs  mod.rs  style.rs  tree.rs
src/examples/: doc.rs  json.rs  json_notation.rs  mod.rs  style.rs  tree.rs
src/if_flat/: doc.rs  mod.rs  notation.rs  partial_print.rs  pretty_print.rs
src/pane/: display_pane.rs  divvy.rs  mod.rs  pane_notation.rs  pane_print.rs  plain_text.rs  pretty_window.rs  printing_options.rs  render_options.rs
src/pane_printing/: divvy.rs  mod.rs  pane.rs  pane_notation.rs  pane_print.rs  plain_text.rs  pretty_window.rs  render_options.rs
src/pretty_printing/: blocky_pretty_print.rs  choose.rs  consolidated_notation.rs  mod.rs  notation_ref.rs  notation_walker.rs  oracle.rs  pretty_doc.rs  pretty_print.rs  pretty_print_2.rs  pretty_print_3.rs
src/style/: color_theme.rs  mod.rs
tests/: basics.rs  flow_wrap.rs  if_flat.rs  iter_chain.rs  json.rs  let_list.rs  oracle_tests.rs  panes.rs  ruby_loop.rs  run_standard_tests.rs  styles.rs  unit_tests.rs
tests-old/: run_standard_tests.rs
tests/common/: mod.rs  (+3 more)
(+36 files in other folders)
