[package]
name = "partial-pretty-printer"
version = "0.1.0"
authors = ["Justin Pombrio <zallambo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "*"
thiserror = "*"

[profile.release]
debug = true
