[package]
name = "partial-pretty-printer"
version = "0.5.0"
authors = ["Justin Pombrio <zallambo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.*"
thiserror = "1.*"
unicode-width = "0.1"
[dependencies.no-nonsense-flamegraphs]
    version = "0.2.*"
    git = "https://github.com/justinpombrio/no-nonsense-flamegraphs"
    optional = true

[dev-dependencies]
rand = "0.8"
serde_json = "1.0"
termion = "3.0"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
debug = true

[features]
default = []
profile = ["no-nonsense-flamegraphs"]
